ref: integrate codecov

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,3 +20,23 @@ jobs:
 
     - name: Test
       run: make test
+  
+  coverage:
+    needs: [ test ]
+    if: github.event_name == 'push'
+    runs-on: ubuntu-20.04
+    name: coverage
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.18'
+      - name: Produce Coverage
+        run: go test -coverprofile=./coverage.txt ./...
+      - name: Upload Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: ./coverage.txt
